[gd_scene load_steps=11 format=3 uid="uid://bm4wgtmgyci17"]

[ext_resource type="Theme" uid="uid://b3wjoiiv6sq22" path="res://UI/Themes/Theme Node.tres" id="1_ory21"]
[ext_resource type="Texture2D" uid="uid://cvudj0qai2hrn" path="res://UI/Nodes/Backing.jpg" id="2_j3kos"]
[ext_resource type="Script" uid="uid://d0xp5idbh7y7v" path="res://Scripts/Pause_Menu.gd" id="2_q5xte"]
[ext_resource type="Texture2D" uid="uid://dwgnmfn6864ro" path="res://UI/thelogogreen.png" id="3_2glbi"]
[ext_resource type="Theme" uid="uid://csctk60s8jar3" path="res://UI/Themes/Theme Node Inner.tres" id="5_q5xte"]
[ext_resource type="Theme" uid="uid://cuyeyw4lvn5op" path="res://UI/Themes/Theme Node NoShadow.tres" id="6_wdhx8"]
[ext_resource type="Texture2D" uid="uid://cmt4jve3igkmj" path="res://UI/GJ Thumbnail.png" id="7_s4v1y"]
[ext_resource type="Texture2D" uid="uid://c7e2wn02ty2xx" path="res://UI/Icons/file-import-solid-full.svg" id="8_ld2c0"]
[ext_resource type="Texture2D" uid="uid://cd1h05xckgmga" path="res://UI/Icons/share-from-square-solid-full.svg" id="10_ld2c0"]
[ext_resource type="Texture2D" uid="uid://dyiswdb1owyty" path="res://UI/Icons/trash-can-solid-full.svg" id="13_mu3iq"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_ory21")
script = ExtResource("2_q5xte")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j3kos")
expand_mode = 1
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Version Number" type="Label" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "v.test"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Title Screen" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Logo" type="TextureRect" parent="MarginContainer/PanelContainer/Title Screen"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("3_2glbi")
expand_mode = 1
stretch_mode = 5

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/Title Screen"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Start Button" type="Button" parent="MarginContainer/PanelContainer/Title Screen"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Boot Simulator"

[node name="Mods" type="Button" parent="MarginContainer/PanelContainer/Title Screen"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Mods"

[node name="Settings" type="Button" parent="MarginContainer/PanelContainer/Title Screen"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Settings"

[node name="Exit" type="Button" parent="MarginContainer/PanelContainer/Title Screen"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Exit"

[node name="Settings" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Settings" type="VBoxContainer" parent="MarginContainer/PanelContainer/Settings"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Settings/Settings"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/Settings/Settings"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/PanelContainer/Settings/Settings"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
tab_alignment = 1
current_tab = 1

[node name="General" type="ScrollContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Username" type="HBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General/VBoxContainer/Username"]
layout_mode = 2
size_flags_horizontal = 3
text = "Username"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General/VBoxContainer/Username"]
layout_mode = 2
size_flags_horizontal = 3
text = "Unknown Author"
placeholder_text = "My Name"
alignment = 2

[node name="Show Pressed Keys" type="HBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General/VBoxContainer/Show Pressed Keys"]
layout_mode = 2
size_flags_horizontal = 3
text = "Show Pressed Keys"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General/VBoxContainer/Show Pressed Keys"]
layout_mode = 2

[node name="Boot on Start" type="HBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General/VBoxContainer/Boot on Start"]
layout_mode = 2
size_flags_horizontal = 3
text = "Boot On Start"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General/VBoxContainer/Boot on Start"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
selected = 0
item_count = 3
popup/item_0/text = "Title Screen"
popup/item_0/id = 0
popup/item_1/text = "Recent Map"
popup/item_1/id = 1
popup/item_2/text = "Editor"
popup/item_2/id = 2

[node name="Graphical" type="ScrollContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Window Mode" type="HBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Window Mode"]
layout_mode = 2
size_flags_horizontal = 3
text = "Window Mode"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Window Mode"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
selected = 0
item_count = 2
popup/item_0/text = "Windowed"
popup/item_0/id = 1
popup/item_1/text = "Fullscreen"
popup/item_1/id = 2

[node name="Physics Bones" type="HBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Physics Bones"]
layout_mode = 2
size_flags_horizontal = 3
text = "Physics Bones"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Physics Bones"]
layout_mode = 2

[node name="Anti-Aliasing" type="HBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Anti-Aliasing"]
layout_mode = 2
size_flags_horizontal = 3
text = "Anti-Aliasing"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Anti-Aliasing"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
selected = 0
item_count = 4
popup/item_0/text = "Off (Fastest)"
popup/item_0/id = 0
popup/item_1/text = "MSAA 2x (Fast)"
popup/item_1/id = 1
popup/item_2/text = "MSAA 4x (Slow)"
popup/item_2/id = 2
popup/item_3/text = "MSAA 8x (Slowest)"
popup/item_3/id = 3

[node name="Render Scale" type="HBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Render Scale"]
layout_mode = 2
size_flags_horizontal = 3
text = "Render Scale (100%) "

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Render Scale"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Render Scale Mode" type="HBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Render Scale Mode"]
layout_mode = 2
size_flags_horizontal = 3
text = "Scale Mode"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Render Scale Mode"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
selected = 0
item_count = 3
popup/item_0/text = "Bilinear (Fastest)"
popup/item_0/id = 0
popup/item_1/text = "FSR 1.0 (Fast)"
popup/item_1/id = 1
popup/item_2/text = "FSR 2.2 (Slow)"
popup/item_2/id = 2

[node name="Audio" type="ScrollContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Audio"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Master Volume" type="HBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Audio/VBoxContainer/Master Volume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Audio/VBoxContainer/Master Volume"]
layout_mode = 2
size_flags_horizontal = 3
rounded = true

[node name="Control" type="ScrollContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "ESC - Pause
Tab - Toggle Editor
WASD: Move
Space: Jump
Q: Slow Speed
Shift: Sprint Speed
E: Toggle Flashlight
        Hold + Scroll: Change Flashlight Size
Hold Ctrl + Scroll: Change Camera Zoom
Hold Alt + Scroll: Change Camera Tilt
R: Smooth Out Movement Toggle
        Hold + Scroll: Change Smooth Amount
F: Smooth Out Camera Toggle
        Hold + Scroll: Change Smooth Amount
V: Fly
	Q: Descend
	Space: Ascend
(Temporary) H: Toggle Cosmetics"

[node name="Credits" type="ScrollContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Credits"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Credits/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Made by The 64th Gamer

Iterated from the DEAD Engine
and RR Engine

Open-Source Code:
github.com/The64thGamer/Give-LIFE

GNU General Public License v3.0"

[node name="Control2" type="Control" parent="MarginContainer/PanelContainer/Settings/Settings"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Back Button" type="Button" parent="MarginContainer/PanelContainer/Settings/Settings"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[node name="Mod Menu" type="MarginContainer" parent="MarginContainer/PanelContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Mods" type="VBoxContainer" parent="MarginContainer/PanelContainer/Mod Menu"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Mod Menu/Mods"]
layout_mode = 2
text = "Mod Menu"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/Mod Menu/Mods"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("5_q5xte")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Mod Holder" type="VBoxContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Import Mod" type="Button" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/Import Mod"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ld2c0")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Mod Desc" type="PanelContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_wdhx8")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Mod Title" type="Label" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Mod Name"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("7_s4v1y")
expand_mode = 1
stretch_mode = 6

[node name="Mod Author" type="Label" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "By: Author"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Mod Author2" type="Label" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Description Example"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Export" type="Button" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc/MarginContainer/VBoxContainer/HBoxContainer/Export"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_ld2c0")
expand_mode = 1
stretch_mode = 5

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Delete" type="Button" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/MarginContainer/Mod Desc/MarginContainer/VBoxContainer/HBoxContainer/Delete"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_mu3iq")
expand_mode = 1
stretch_mode = 5

[node name="Control2" type="Control" parent="MarginContainer/PanelContainer/Mod Menu/Mods"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Back Button" type="Button" parent="MarginContainer/PanelContainer/Mod Menu/Mods"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[node name="Map Menu" type="MarginContainer" parent="MarginContainer/PanelContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Mods" type="VBoxContainer" parent="MarginContainer/PanelContainer/Map Menu"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/Map Menu/Mods"]
layout_mode = 2
text = "Maps"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/Map Menu/Mods"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/Map Menu/Mods"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("5_q5xte")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/Map Menu/Mods/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/Map Menu/Mods/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Map Holder" type="VBoxContainer" parent="MarginContainer/PanelContainer/Map Menu/Mods/PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control2" type="Control" parent="MarginContainer/PanelContainer/Map Menu/Mods"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Back Button" type="Button" parent="MarginContainer/PanelContainer/Map Menu/Mods"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[node name="ExportDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
size = Vector2i(1086, 360)
access = 2
filters = PackedStringArray("*.pck")

[node name="ImportDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(1086, 360)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.pck")

[connection signal="pressed" from="MarginContainer/PanelContainer/Title Screen/Start Button" to="." method="_on_simulator_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/Title Screen/Mods" to="." method="switchMenu" binds= ["mods"]]
[connection signal="pressed" from="MarginContainer/PanelContainer/Title Screen/Settings" to="." method="switchMenu" binds= ["settings"]]
[connection signal="pressed" from="MarginContainer/PanelContainer/Title Screen/Exit" to="." method="_on_quit_button_pressed"]
[connection signal="text_changed" from="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General/VBoxContainer/Username/LineEdit" to="." method="_on_line_edit_changed" binds= ["username"]]
[connection signal="toggled" from="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General/VBoxContainer/Show Pressed Keys/CheckButton" to="." method="_on_button_changed" binds= ["show_key_presses"]]
[connection signal="item_selected" from="MarginContainer/PanelContainer/Settings/Settings/TabContainer/General/VBoxContainer/Boot on Start/OptionButton" to="." method="_on_option_changed" binds= ["boot_on_start"]]
[connection signal="item_selected" from="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Window Mode/OptionButton" to="." method="_on_option_changed" binds= ["window_mode"]]
[connection signal="toggled" from="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Physics Bones/CheckButton" to="." method="_on_button_changed" binds= ["physics_bones"]]
[connection signal="item_selected" from="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Anti-Aliasing/OptionButton" to="." method="_on_option_changed" binds= ["msaa_3d"]]
[connection signal="value_changed" from="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Render Scale/HSlider" to="." method="_on_slider_changed" binds= ["render_scale"]]
[connection signal="item_selected" from="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Graphical/VBoxContainer/Render Scale Mode/OptionButton" to="." method="_on_option_changed" binds= ["scale_mode"]]
[connection signal="value_changed" from="MarginContainer/PanelContainer/Settings/Settings/TabContainer/Audio/VBoxContainer/Master Volume/HSlider" to="." method="_on_slider_changed" binds= ["master_volume"]]
[connection signal="pressed" from="MarginContainer/PanelContainer/Settings/Settings/Back Button" to="." method="switchMenu" binds= ["title"]]
[connection signal="pressed" from="MarginContainer/PanelContainer/Mod Menu/Mods/PanelContainer/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/Import Mod" to="." method="import_mod"]
[connection signal="pressed" from="MarginContainer/PanelContainer/Mod Menu/Mods/Back Button" to="." method="switchMenu" binds= ["title"]]
[connection signal="pressed" from="MarginContainer/PanelContainer/Map Menu/Mods/Back Button" to="." method="switchMenu" binds= ["title"]]
[connection signal="file_selected" from="ExportDialog" to="." method="_on_export_mod_selected"]
[connection signal="file_selected" from="ImportDialog" to="." method="_on_import_mod_selected"]
